# opencv_contrib

./: CMakeLists.txt
modules/aruco/include/opencv2/: aruco.hpp
modules/aruco/include/opencv2/aruco/: charuco.hpp
modules/aruco/samples/: detect_board.cpp  detect_board_charuco.cpp
